--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive/responsive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -58,19 +59,22 @@
             <div id="status">
                 <h1>Status</h1>
                 <ul>
-                    <li>HP: 300</li>
-                    <li>Ataque: 600</li> 
-                    <li>Defesa: 500</li>
-                    <li>Velocidade: 300</li>
-                    <li>Total: 1700</li>
+                    <li>HP: 35</li>
+                    <li>Ataque: 55</li>
+                    <li>Defesa: 30</li>
+                    <li>Ataque Especial: 50</li>
+                    <li>Defesa Especial: 40</li>
+                    <li>Velocidade: 90</li>
                 </ul>
             </div>
 
             <div id="skills">
                 <h1>Habilidades</h1>
                 <ul>
-                    <li>Choque do trovão</li>
-                    <li>Cabeçada</li>
+                    <li>Substitute</li>
+                    <li>Thunderbolt</li>
+                    <li>Hidden Power Ice</li>
+                    <li>Encore</li>
                 </ul>
             </div>
         </div>
